--- a/templates/index.html
+++ b/templates/index.html
@@ -1,43 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-<br>
-<form action="{% url 'thanks_page' %}" method="POST">
-    {% csrf_token %}
-    <label>Имя</label>
-    <input name="name">
-    <label>Телефон</label>
-    <input name="phone">
-    <button type="submit">ОТПРАВИТЬ</button>
-</form>
-<br>
+{% block title %} Title Index {% endblock %}
 
-{% if object_list %}
-<table border="1px">
-    <tr>
-        <th>ID</th>
-        <th>Дата</th>
-        <th>Имя</th>
-        <th>Телефон</th>
-    </tr>
+{% block content %}
+<h1>Данные из индекса</h1>
 
-    {% for obj in object_list %}
-    <tr>
-        <th>{{ obj.id }}</th>
-        <th>{{ obj.order_dt }}</th>
-        <th>{{ obj.order_name }}</th>
-        <th>{{ obj.order_phone }}</th>
-    </tr>
-    {% endfor %}
-</table>
-{% else %}
-Данных нет
-{% endif %}
+{% include 'index_old.html' %}
 
-</body>
-</html>
+{% endblock %}
