Статические и media директории

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
 {% block title %} Title Index {% endblock %}
-
+{% load static %}
 {% block content %}
 <h1>Данные из индекса</h1>
+
+<img src="{% static 'img\2.png' %}" height="450">
 
 {% include 'index_old.html' %}
 
