--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} Base Title {% endblock %}</title>
+    <link href="{% static 'style.css' %}" rel="stylesheet">
 </head>
 <body>
 <h1>Шапка</h1>
