--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,10 @@
 
 {% endblock %}
 
+{% block thanks %}
+
+{% endblock %}
+
 <footer>
     <div class="container">
         <nav class="navbar navbar-light bg-light container">
